@@ -1,13 +1,14 @@
 #!/bin/bash
 
-# java.lang.NumberFormatException: For input string: "FOOBAR"
-java --module-path modules -m com.norsys/norsys.main.Main
+#Run Main
+echo "CalculatriceTest"
+java --module-path lib:modules								\
+	--add-modules org.common.test 							\
+	-m junit/org.junit.runner.JUnitCore common.math.test.CalculatriceTest
 
-echo "---------------------------"
+echo "InternalTest"
+java --module-path lib:modules								\
+	--add-modules org.common.test 							\
+	--add-exports org.common/internal.math=org.common.test                  \
+	-m junit/org.junit.runner.JUnitCore internal.math.test.InternalTest
 
-# java.lang.NumberFormatException: Gros Naze !
-# On surcharge NumberFormatException
-# com.norsys sans tenir compte de la déclaration du module org.common
-java --patch-module java.base=modules/java.base \
-     --module-path modules -m com.norsys/norsys.main.Main 
-   
